[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decentralized-file-sharing"
version = "1.0.0"
description = "AES-256 secure peer-to-peer file sharing utility with end-to-end encryption."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
